camo-derive/tests/fail/lifetimes.stderr
error: `camo` does not support lifetimes
 --> tests/fail/lifetimes.rs:6:12
  |
6 | struct Foo<'a> {
  |            ^^
